force-app/main/default/objects/QA_Response__c/QA_Response__c.object-meta.xml
<CustomObject>
    <description>(ONE TO MANY) dengan object QA Response Item</description>
    <label>QA Response</label>
    <nameField>
        <displayFormat>QA Response - {00000000}</displayFormat>
        <label>QA Response Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QA Response</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>