force-app/main/default/objects/QA_Response__c/fields/Agent_Leader_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Agent_Leader_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nama Agent Leader</label>
    <referenceTo>User</referenceTo>
    <relationshipName>QA_Response1</relationshipName>
    <type>Lookup</type>
</CustomField>