force-app/main/default/objects/QA_Response__c/fields/Agent_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Agent_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nama Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>QA_Response2</relationshipName>
    <type>Lookup</type>
</CustomField>