force-app/main/default/objects/QA_Response__c/fields/Approval_QA_Pembina_Banding__c.field-meta.xml
<CustomField>
    <fullName>Approval_QA_Pembina_Banding__c</fullName>
    <label>Approval QA Pembina - Banding</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>