force-app/main/default/objects/QA_Response__c/fields/Durasi_Percakapan__c.field-meta.xml
<CustomField>
    <fullName>Durasi_Percakapan__c</fullName>
    <label>Durasi Percakapan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>