force-app/main/default/objects/QA_Response__c/fields/Ext_Avaya_ID_Login__c.field-meta.xml
<CustomField>
    <fullName>Ext_Avaya_ID_Login__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ext Avaya/ ID Login</label>
    <length>255</length>
    <type>Text</type>
</CustomField>