force-app/main/default/objects/QA_Response__c/fields/In_Periode__c.field-meta.xml
<CustomField>
    <fullName>In_Periode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Periode</label>
    <type>Checkbox</type>
</CustomField>