force-app/main/default/objects/QA_Response__c/fields/In_Periode_Formula__c.field-meta.xml
<CustomField>
    <fullName>In_Periode_Formula__c</fullName>
    <formula>NOW() &gt;= Tanggal_Waktu_Periode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>In Periode Formula</label>
    <type>Checkbox</type>
</CustomField>