force-app/main/default/objects/QA_Response__c/fields/Inisial_Agent__c.field-meta.xml
<CustomField>
    <fullName>Inisial_Agent__c</fullName>
    <label>Inisial Agent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>