force-app/main/default/objects/QA_Response__c/fields/isCreated__c.field-meta.xml
<CustomField>
    <fullName>isCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isCreated</label>
    <type>Checkbox</type>
</CustomField>