force-app/main/default/objects/QA_Response__c/fields/isDirect_Penilaian_QA__c.field-meta.xml
<CustomField>
    <fullName>isDirect_Penilaian_QA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag penanda record direct dari QA Response</description>
    <label>isDirect Penilaian QA</label>
    <type>Checkbox</type>
</CustomField>