force-app/main/default/objects/QA_Response__c/fields/Kategori_Penilaian__c.field-meta.xml
<CustomField>
    <fullName>Kategori_Penilaian__c</fullName>
    <description>menyimpan informasi skill / kategori pada aspek penilaian</description>
    <label>Kategori Penilaian</label>
    <length>255</length>
    <type>Text</type>
</CustomField>