force-app/main/default/objects/QA_Response__c/fields/Nama_Agent__c.field-meta.xml
<CustomField>
    <fullName>Nama_Agent__c</fullName>
    <label>Nama Agent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>