force-app/main/default/objects/QA_Response__c/fields/Nama_Nasabah__c.field-meta.xml
<CustomField>
    <fullName>Nama_Nasabah__c</fullName>
    <description>Direct QA Response</description>
    <label>Nama Nasabah</label>
    <length>255</length>
    <type>Text</type>
</CustomField>