force-app/main/default/objects/QA_Response__c/fields/Nama_Nasabah_New__c.field-meta.xml
<CustomField>
    <fullName>Nama_Nasabah_New__c</fullName>
    <formula>IF(No_Tiket_New__r.AccountId != NULL, 
   No_Tiket_New__r.Account.FirstName &amp; &quot; &quot; &amp; No_Tiket_New__r.Account.LastName, 
   No_Tiket_New__r.SCC_Nama_Pelapor__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nama Nasabah</label>
    <type>Text</type>
</CustomField>