force-app/main/default/objects/QA_Response__c/fields/Nama_QA__c.field-meta.xml
<CustomField>
    <fullName>Nama_QA__c</fullName>
    <label>Nama QA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>