force-app/main/default/objects/QA_Response__c/fields/Nama_QA_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Nama_QA_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nama QA</label>
    <referenceTo>User</referenceTo>
    <relationshipName>QA_Response</relationshipName>
    <type>Lookup</type>
</CustomField>