force-app/main/default/objects/QA_Response__c/fields/No_Tiket_New__c.field-meta.xml
<CustomField>
    <fullName>No_Tiket_New__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>No Tiket BRICARE</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>QA Response</relationshipLabel>
    <relationshipName>QA_Response</relationshipName>
    <type>Lookup</type>
</CustomField>