force-app/main/default/objects/QA_Response__c/fields/Nomor_Ponsel_Telepon__c.field-meta.xml
<CustomField>
    <fullName>Nomor_Ponsel_Telepon__c</fullName>
    <description>Direct QA Response</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Nomor Ponsel / Telepon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>