force-app/main/default/objects/QA_Response__c/fields/Nomor_Ponsel_Telepon_New__c.field-meta.xml
<CustomField>
    <fullName>Nomor_Ponsel_Telepon_New__c</fullName>
    <formula>No_Tiket_New__r.Cust_Current_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nomor Ponsel/ Telepon</label>
    <type>Text</type>
</CustomField>