force-app/main/default/objects/QA_Response__c/fields/Nomor_Rekening__c.field-meta.xml
<CustomField>
    <fullName>Nomor_Rekening__c</fullName>
    <description>Direct QA Response</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Nomor Rekening</label>
    <length>255</length>
    <type>Text</type>
</CustomField>