force-app/main/default/objects/QA_Response__c/fields/Nomor_Rekening_New__c.field-meta.xml
<CustomField>
    <fullName>Nomor_Rekening_New__c</fullName>
    <formula>No_Tiket_New__r.SCC_Account_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nomor Rekening</label>
    <type>Text</type>
</CustomField>