force-app/main/default/objects/QA_Response__c/fields/Nomor_Tiket__c.field-meta.xml
<CustomField>
    <fullName>Nomor_Tiket__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nomor Tiket (No Use)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>