force-app/main/default/objects/QA_Response__c/fields/Perihal__c.field-meta.xml
<CustomField>
    <fullName>Perihal__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Perihal</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>