force-app/main/default/objects/QA_Response__c/fields/Periode__c.field-meta.xml
<CustomField>
    <fullName>Periode__c</fullName>
    <formula>IF(
    DAY(DATEVALUE(CreatedDate)) &lt;= 7, 
    &quot;Periode 1&quot;,
    IF(
        DAY(DATEVALUE(CreatedDate)) &lt;= 14, 
        &quot;Periode 2&quot;,
        IF(
            DAY(DATEVALUE(CreatedDate)) &lt;= 21, 
            &quot;Periode 3&quot;, 
            &quot;Periode 4&quot;
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Periode</label>
    <type>Text</type>
</CustomField>