force-app/main/default/objects/QA_Response__c/fields/QA_Final__c.field-meta.xml
<CustomField>
    <fullName>QA_Final__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QA Final</label>
    <type>Checkbox</type>
</CustomField>