force-app/main/default/objects/QA_Response__c/fields/Rata_Rata_Total_Non_Critical_Error__c.field-meta.xml
<CustomField>
    <fullName>Rata_Rata_Total_Non_Critical_Error__c</fullName>
    <label>Rata-Rata Total Non Critical Error</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>