force-app/main/default/objects/QA_Response__c/fields/Respon_Jawab__c.field-meta.xml
<CustomField>
    <fullName>Respon_Jawab__c</fullName>
    <label>Respon Jawab</label>
    <length>255</length>
    <type>Text</type>
</CustomField>