force-app/main/default/objects/QA_Response__c/fields/Sanggahan__c.field-meta.xml
<CustomField>
    <fullName>Sanggahan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sanggahan</label>
    <type>Checkbox</type>
</CustomField>