force-app/main/default/objects/QA_Response__c/fields/Sanggahan_Exp__c.field-meta.xml
<CustomField>
    <fullName>Sanggahan_Exp__c</fullName>
    <formula>NOW() &lt; Tanggal_Waktu_Periode__c + 2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sanggahan Exp</label>
    <type>Checkbox</type>
</CustomField>