force-app/main/default/objects/QA_Response__c/fields/Sanggahan_Rata_Rata_Total_Non_Critical_E__c.field-meta.xml
<CustomField>
    <fullName>Sanggahan_Rata_Rata_Total_Non_Critical_E__c</fullName>
    <label>Sanggahan Rata-Rata Total Non Critical E</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>