force-app/main/default/objects/QA_Response__c/fields/Sanggahan_Total_Non_Critical_Error__c.field-meta.xml
<CustomField>
    <fullName>Sanggahan_Total_Non_Critical_Error__c</fullName>
    <label>Sanggahan Total Non Critical Error</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>