force-app/main/default/objects/QA_Response__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <formula>Agent_Lookup__r.SITE_CCT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site</label>
    <type>Text</type>
</CustomField>