force-app/main/default/objects/QA_Response__c/fields/Status_Approval__c.field-meta.xml
<CustomField>
    <fullName>Status_Approval__c</fullName>
    <defaultValue>&apos;New&apos;</defaultValue>
    <label>Status Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Open</fullName>
                <label>Submit Sanggahan</label>
            </value>
            <value>
                <fullName>Approve by Agent Leader</fullName>
            </value>
            <value>
                <fullName>Approve by QA</fullName>
            </value>
            <value>
                <fullName>Reject by Agent Leader</fullName>
            </value>
            <value>
                <fullName>Reject by QA</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Appeal Approve</fullName>
            </value>
            <value>
                <fullName>Appeal Reject</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>