force-app/main/default/objects/QA_Response__c/fields/Sub_Kategori_Penilaian__c.field-meta.xml
<CustomField>
    <fullName>Sub_Kategori_Penilaian__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sub Kategori Penilaian</label>
    <length>255</length>
    <type>Text</type>
</CustomField>