force-app/main/default/objects/QA_Response__c/fields/Tanggal_Callmon__c.field-meta.xml
<CustomField>
    <fullName>Tanggal_Callmon__c</fullName>
    <label>Tanggal Callmon</label>
    <type>Date</type>
</CustomField>