force-app/main/default/objects/QA_Response__c/fields/Tanggal_Interaksi__c.field-meta.xml
<CustomField>
    <fullName>Tanggal_Interaksi__c</fullName>
    <label>Tanggal Interaksi</label>
    <type>Date</type>
</CustomField>