force-app/main/default/objects/QA_Response__c/fields/Tanggal_Waktu_Periode__c.field-meta.xml
<CustomField>
    <fullName>Tanggal_Waktu_Periode__c</fullName>
    <formula>DATETIMEVALUE(
    TEXT(Tanggal_Periode__c) &amp; &quot; 12:00:00&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tanggal Waktu Periode</label>
    <type>DateTime</type>
</CustomField>