force-app/main/default/objects/QA_Response__c/fields/Total_0_Critical_Error__c.field-meta.xml
<CustomField>
    <fullName>Total_0_Critical_Error__c</fullName>
    <label>Total 0 - Critical Error</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>