force-app/main/default/objects/QA_Response__c/fields/Total_Sikap_Melayani__c.field-meta.xml
<CustomField>
    <fullName>Total_Sikap_Melayani__c</fullName>
    <label>Total Keseluruhan Penilaian</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>