force-app/main/default/objects/QA_Response__c/fields/Waktu_Interaksi__c.field-meta.xml
<CustomField>
    <fullName>Waktu_Interaksi__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Waktu Interaksi</label>
    <length>255</length>
    <type>Text</type>
</CustomField>