force-app/main/default/objects/QA_Response__c/recordTypes/Non_Voice.recordType-meta.xml
<RecordType>
    <fullName>Non_Voice</fullName>
    <active>true</active>
    <label>Non Voice</label>
</RecordType>