force-app/main/default/objects/QA_Response__c/recordTypes/RPS.recordType-meta.xml
<RecordType>
    <fullName>RPS</fullName>
    <active>true</active>
    <label>RPS</label>
</RecordType>