force-app/main/default/objects/QA_Response__c/recordTypes/VBS.recordType-meta.xml
<RecordType>
    <fullName>VBS</fullName>
    <active>true</active>
    <label>VBS</label>
</RecordType>