force-app/main/default/objects/QA_Response__c/recordTypes/Voice.recordType-meta.xml
<RecordType>
    <fullName>Voice</fullName>
    <active>true</active>
    <label>Voice</label>
</RecordType>