force-app/main/default/objects/QA_Response__c/listViews/All_Response_QA_Before_Submit.listView-meta.xml
<ListView>
    <fullName>All_Response_QA_Before_Submit</fullName>
    <columns>NAME</columns>
    <columns>Kategori_Penilaian__c</columns>
    <columns>Nama_Agent__c</columns>
    <columns>Nama_Nasabah__c</columns>
    <columns>No_Tiket_New__c</columns>
    <columns>Call_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>All Response QA - Before Submit</label>
    <sharedTo>
        <group>QA_Penilai</group>
    </sharedTo>
</ListView>