force-app/main/default/objects/QA_Response__c/listViews/My_Response.listView-meta.xml
<ListView>
    <fullName>My_Response</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Kategori_Penilaian__c</columns>
    <columns>Nama_Agent__c</columns>
    <columns>Nama_QA__c</columns>
    <columns>No_Tiket_New__c</columns>
    <columns>Status_Approval__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>In_Periode_Formula__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Response</label>
</ListView>