force-app/main/default/objects/QA_Response__c/listViews/My_View.listView-meta.xml
<ListView>
    <fullName>My_View</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Status_Approval__c</columns>
    <columns>Periode__c</columns>
    <columns>Tanggal_Waktu_Periode__c</columns>
    <columns>In_Periode_Formula__c</columns>
    <columns>QA_Final__c</columns>
    <columns>Sanggahan__c</columns>
    <columns>Sanggahan_Exp__c</columns>
    <columns>Banding_Exp__c</columns>
    <filterScope>Everything</filterScope>
    <label>My View</label>
    <sharedTo>
        <role>SCC_System_Administrator</role>
    </sharedTo>
</ListView>