force-app/main/default/objects/QA_Response__c/listViews/Need_Approval_QA_Pembina.listView-meta.xml
<ListView>
    <fullName>Need_Approval_QA_Pembina</fullName>
    <columns>NAME</columns>
    <columns>Nama_Agent__c</columns>
    <columns>Nama_Nasabah_New__c</columns>
    <columns>No_Tiket_New__c</columns>
    <columns>Perihal__c</columns>
    <columns>Periode__c</columns>
    <columns>Total_Critical_Error__c</columns>
    <columns>Total_Non_Critical_Error__c</columns>
    <columns>Total_Sikap_Melayani__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status_Approval__c</field>
        <operation>equals</operation>
        <value>In Progress</value>
    </filters>
    <label>Need Approval - QA Pembina</label>
</ListView>